--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="_light_grey">#F8EDDE</color>
     <color name="_light_purple">#C1ABA6</color>
     <color name="_purple">#533B4D</color>
+
+    <color name="_black">#1a1a1a</color>
 </resources>
