--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,133 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="julienbirabent.musicsharringappprotoype.MainActivity">
+    tools:context="julienbirabent.musicsharringappprotoype.MainActivity"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="7">
 
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/audio_player_container"
+        android:layout_weight="1"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:background="@android:color/white"
+            android:layout_height="match_parent">
+
+            <View
+                android:background="@color/_purple"
+                android:layout_width="match_parent"
+                android:layout_height="1dp">
+
+            </View>
+
+            <ImageView
+                android:id="@+id/thumbnail_playing_song"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="14dp"
+                android:padding="2dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/pochette_album" />
+
+            <TextView
+                android:id="@+id/audio_player_song_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/thumbnail_playing_song"
+                android:layout_toEndOf="@+id/thumbnail_playing_song"
+                android:layout_marginStart="3dp"
+                android:text="To Binge"
+                android:textColor="@color/_black" />
+
+            <TextView
+                android:id="@+id/audio_player_artist_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/audio_player_song_title"
+                android:layout_toEndOf="@+id/thumbnail_playing_song"
+                android:layout_marginStart="3dp"
+                android:textSize="12sp"
+                android:textColor="@color/_black"
+                android:text="Gorrilaz" />
+
+            <TextView
+                android:id="@+id/audio_player_album_titre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/_black"
+                android:text="Plastic Beach"
+                android:layout_below="@id/audio_player_artist_name"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@id/thumbnail_playing_song" />
+
+            <ImageButton
+                android:id="@+id/audio_player_more_options"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:scaleType="center"
+                android:background="?android:selectableItemBackground"
+                app:srcCompat="@drawable/ic_more_vertical_black"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="13dp" />
+
+            <ImageButton
+                android:id="@+id/audio_player_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="?android:selectableItemBackground"
+                app:srcCompat="@drawable/ic_next"
+                android:layout_marginRight="15dp"
+                android:layout_toStartOf="@+id/audio_player_more_options" />
+
+            <ImageButton
+                android:id="@+id/audio_player_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_play_arrow"
+                android:background="?android:selectableItemBackground"
+                android:layout_toLeftOf="@id/audio_player_next"
+                android:layout_marginRight="15dp"
+                android:layout_centerVertical="true"
+                />
+
+            <ImageButton
+                android:id="@+id/audio_player_previous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_previous"
+                android:background="?android:selectableItemBackground"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15dp"
+                android:layout_toStartOf="@+id/audio_player_play" />
+
+
+
+
+
+
+
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -32,6 +139,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/_black"
+        app:itemTextColor="@color/_black"
+        android:backgroundTint="@color/_yellow"
         app:menu="@menu/navigation" />
 
 </LinearLayout>
