Ajout de l'action bar au top

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,10 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="_yellow">#FFCC33</color>
-    <color name="_grey">#CFDBD5</color>
-    <color name="_light_grey">#F8EDDE</color>
-    <color name="_light_purple">#C1ABA6</color>
-    <color name="_purple">#533B4D</color>
+    <color name="_grey">#bdc8c2</color>
+    <color name="_light_grey">#d3d8cb</color>
+    <color name="_light_purple">#b09c97</color>
+    <color name="_purple">#4c3646</color>
 
     <color name="_black">#1a1a1a</color>
 </resources>
