--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/_yellow</item>
         <item name="colorPrimaryDark">@color/_black</item>
         <item name="colorAccent">@color/_purple</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 </resources>
