Mise en place de la liste des playlists générées (mockup)

--- a/app/src/main/res/layout/fragment_layout_my_profile.xml
+++ b/app/src/main/res/layout/fragment_layout_my_profile.xml
@@ -96,7 +96,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:elevation="4dp"
-                android:text="My Playlists"
+                android:text="My recommanded songs"
                 android:textAlignment="center"
                 android:textColor="@color/_black" />
 
