Ajout d<une classe Utils pour les fragments + changement de quelques aspects de certains menu

--- a/app/src/main/res/menu/playlist_content_base_menu.xml
+++ b/app/src/main/res/menu/playlist_content_base_menu.xml
@@ -4,12 +4,6 @@
 
     <item
         android:icon="@drawable/ic_share"
-        android:title="Share"
-        android:visible="true"
-        app:showAsAction="always" />
-    <item
-
-        android:icon="@drawable/ic_gear"
-        android:title="Settings"
+        android:title="Share a song"
         app:showAsAction="always" />
 </menu>
