--- a/app/src/main/res/layout/playlist_row.xml
+++ b/app/src/main/res/layout/playlist_row.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:layout_margin="5dp"
-        android:padding="2dp"
+        android:padding="7dp"
         android:id="@+id/playlist_vignette"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:scaleType="centerInside"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="14dp" />
@@ -39,7 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?android:selectableItemBackground"
-        app:srcCompat="@drawable/ic_more_vertical_black"
+        app:srcCompat="@drawable/ic_more_options_row"
+        android:rotation="90"
         android:layout_alignBottom="@+id/playlist_number_of_songs"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="12dp" />
