--- a/app/src/main/res/layout/playlist_row.xml
+++ b/app/src/main/res/layout/playlist_row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants">
 
 
@@ -42,8 +42,8 @@
         android:background="?android:selectableItemBackground"
         app:srcCompat="@drawable/ic_more_options_row"
         android:rotation="90"
-        android:layout_alignBottom="@+id/playlist_number_of_songs"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="12dp" />
+        android:layout_marginEnd="14dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
