--- a/app/src/main/res/menu/my_profile_menu.xml
+++ b/app/src/main/res/menu/my_profile_menu.xml
@@ -3,11 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:icon="@drawable/ic_share"
+        android:icon="?android:attr/actionModeShareDrawable"
         android:title="Item"
         app:showAsAction="always" />
-    <item
-        android:icon="@drawable/ic_more_vertical_black"
-        android:title="More options"
-        app:showAsAction="always" />
+    <item android:title="Item" />
+
 </menu>
