--- a/app/src/main/res/menu/custom_playlists_menu.xml
+++ b/app/src/main/res/menu/custom_playlists_menu.xml
@@ -3,11 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:icon="@drawable/ic_share"
+        android:id="@+id/share_a_song"
+        android:icon="?android:attr/actionModeShareDrawable"
         android:title="Share"
         app:showAsAction="always" />
     <item
+        android:id="@+id/add_playlist"
         android:icon="@drawable/ic_add"
-        android:title="Add"
+        android:title="Add a new playlist"
         app:showAsAction="always" />
 </menu>
