Création de la vue pour le fragment SongDetailPageFragment

--- a/app/src/main/res/layout/song_detail_page_fragment.xml
+++ b/app/src/main/res/layout/song_detail_page_fragment.xml
@@ -1,7 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="6">
+
+
+            <ImageView
+                android:id="@+id/song_page_vignette_album"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/transparent"
+                app:srcCompat="@drawable/default_album_vignette" />
+
+            <TextView
+                android:id="@+id/song_page_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_below="@id/song_page_vignette_album"
+                android:layout_toStartOf="@+id/song_page_vignette_album"
+                android:text="The title"
+                android:textColor="@color/_black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/song_page_artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/song_page_title"
+                android:layout_below="@id/song_page_vignette_album"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@+id/song_page_vignette_album"
+                android:text="Artist"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/song_page_album"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/song_page_title"
+                android:layout_below="@+id/song_page_artist"
+                android:text="The album of the tune" />
+
+            <RelativeLayout
+
+                android:id="@+id/relativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/song_page_album"
+                android:layout_marginTop="10dp"
+                android:background="@color/_yellow">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/title_recommanded_by"
+                    android:textColor="@color/_black" />
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/page_song_recommanded_by_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/song_page_album"
+                android:layout_below="@+id/relativeLayout"
+                android:layout_marginTop="10dp"
+                android:text="Recommanded by ..."
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/song_page_view_all_recommandations"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/page_song_recommanded_by_label"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/relativeLayout"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/_light_purple"
+                android:text="View all"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="@color/_purple"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/page_song_recommanded_by_label"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:background="@color/_yellow"
+                android:text="@string/button_see_the_comments"
+                android:textColor="@color/_black" />
+        </RelativeLayout>
+
+
+    </ScrollView>
 
 
 
-</RelativeLayout>
+</LinearLayout>
