Ajustement du layout de la vue contenant les informations détaillées d'une chanson

--- a/app/src/main/res/layout/song_detail_page_fragment.xml
+++ b/app/src/main/res/layout/song_detail_page_fragment.xml
@@ -100,17 +100,37 @@
                 android:textColor="@color/_purple"
                 android:textSize="14sp" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/page_song_recommanded_by_label"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
+            <RelativeLayout
+                android:id="@+id/song_page_label_comments_section"
                 android:background="@color/_yellow"
-                android:text="@string/button_see_the_comments"
-                android:textColor="@color/_black" />
+                android:layout_below="@id/page_song_recommanded_by_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+
+                <TextView
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    android:textColor="@color/_black"
+                    android:text="@string/comment_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </RelativeLayout>
+
+            <ListView
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/song_page_label_comments_section"
+                android:id="@+id/song_page_comments_listView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
+
         </RelativeLayout>
+
+
 
 
     </ScrollView>
