On accède a la vue détaillé d'une chanson via le popmenu et plus via l'item de la liste directement

--- a/app/src/main/res/menu/song_popup_menu.xml
+++ b/app/src/main/res/menu/song_popup_menu.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/song_detail"
+        android:title="View the song details" />
+    <item
         android:id="@+id/recommande_song"
         android:title="Recommande this song" />
     <item
