--- a/app/src/main/res/layout/song_detail_page_fragment.xml
+++ b/app/src/main/res/layout/song_detail_page_fragment.xml
@@ -23,6 +23,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
+                android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
                 app:srcCompat="@drawable/default_album_vignette" />
 
@@ -30,9 +31,9 @@
                 android:id="@+id/song_page_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_below="@id/song_page_vignette_album"
-                android:layout_toStartOf="@+id/song_page_vignette_album"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="15dp"
                 android:text="The title"
                 android:textColor="@color/_black"
                 android:textSize="18sp" />
@@ -76,9 +77,9 @@
 
             <TextView
                 android:id="@+id/page_song_recommanded_by_label"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_alignStart="@+id/song_page_album"
+               android:layout_marginLeft="10dp"
                 android:layout_below="@+id/relativeLayout"
                 android:layout_marginTop="10dp"
                 android:text="Recommanded by ..."
@@ -87,7 +88,7 @@
             <Button
                 android:id="@+id/song_page_view_all_recommandations"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_alignBottom="@+id/page_song_recommanded_by_label"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@id/relativeLayout"
