Ajout du Music Player (buggé pour le moment - fix au prochain commit)

--- a/app/src/main/res/menu/song_page_menu.xml
+++ b/app/src/main/res/menu/song_page_menu.xml
@@ -10,4 +10,7 @@
         android:icon="?attr/actionModeShareDrawable"
         android:title="Share this song"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/recommande_song"
+        android:title="Recommande this song" />
 </menu>
