On peut à présent recommander un morceau depuis n importe quel item de menu qui propose cette option

--- a/app/src/main/res/menu/song_page_menu.xml
+++ b/app/src/main/res/menu/song_page_menu.xml
@@ -12,5 +12,6 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/recommande_song"
+        android:checkable="true"
         android:title="Recommande this song" />
 </menu>
