--- a/app/src/main/res/menu/song_popup_menu.xml
+++ b/app/src/main/res/menu/song_popup_menu.xml
@@ -13,5 +13,8 @@
     <item
         android:id="@+id/add_this_song"
         android:title="add this song to..." />
+    <item
+        android:id="@+id/delete_song"
+        android:title="@string/popmenu_delete_song" />
 
 </menu>
