--- a/app/src/main/res/layout/add_to_playlist_row.xml
+++ b/app/src/main/res/layout/add_to_playlist_row.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants">
-
 
     <ImageView
         android:layout_margin="5dp"
@@ -11,8 +9,8 @@
         android:id="@+id/playlist_vignette"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/default_album_vignette"
         android:scaleType="centerInside"
+        android:src="@drawable/default_album_vignette"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="14dp" />
@@ -20,9 +18,9 @@
     <TextView
         android:id="@+id/playlist_name"
         android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="13dp"
         android:textColor="@color/_black"
         android:textSize="16sp"
@@ -37,16 +35,15 @@
         android:layout_below="@+id/playlist_name"
         android:text="2 songs you never listened to" />
 
-    <ImageButton
-        android:id="@+id/playlist_moreOptions"
+    <CheckBox
+        android:id="@+id/add_to_playlist_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?android:selectableItemBackground"
-        app:srcCompat="@drawable/ic_more_options_row"
-        android:rotation="90"
-        android:layout_marginEnd="14dp"
-
+        android:layout_alignParentEnd="true"
+        android:clickable="false"
         android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginEnd="14dp"
+        android:focusable="false" />
+
 
 </RelativeLayout>
