Ajout du fragment qui permettra la s/lection des gouts musicaux du user + ajout de la navigation in/out pour ce fragment

--- a/app/src/main/res/menu/generated_playlists_menu.xml
+++ b/app/src/main/res/menu/generated_playlists_menu.xml
@@ -10,6 +10,7 @@
         app:showAsAction="always" />
     <item
 
+        android:id="@+id/select_music_types"
         android:icon="@drawable/ic_gear"
         android:title="Settings"
         app:showAsAction="always" />
