--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="_yellow">#FFCC33</color>
+    <color name="_yellow">#ffcc33</color>
     <color name="_grey">#bdc8c2</color>
     <color name="_light_grey">#d3d8cb</color>
     <color name="_light_purple">#b09c97</color>
