--- a/app/src/main/res/layout/music_type_preferences_fragment.xml
+++ b/app/src/main/res/layout/music_type_preferences_fragment.xml
@@ -14,13 +14,35 @@
         android:textColor="@color/_black"
         android:visibility="visible" />
 
-    <ListView
-        android:id="@+id/music_type_preferences_listView"
+    <LinearLayout
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:orientation="vertical"
+        android:layout_below="@id/music_type_preferences_header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/music_type_preferences_header"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:divider="@color/_light_purple"
-        android:dividerHeight="1dp" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:layout_weight="5"
+            android:id="@+id/music_type_preferences_listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/_light_purple"
+            android:layout_marginBottom="10dp"
+            android:dividerHeight="1dp" />
+
+        <Button
+            android:id="@+id/music_type_preferences_confirmation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/_yellow"
+            android:text="@string/confirm_the_selection"
+            android:textAlignment="center"
+            android:textColor="@color/_black" />
+
+
+    </LinearLayout>
+
+
 </RelativeLayout>
