--- a/app/src/main/res/layout/fragment_recommand_song.xml
+++ b/app/src/main/res/layout/fragment_recommand_song.xml
@@ -1,6 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:windowSoftInputMode="adjustNothing"
+    >
+
+    <SearchView
+        android:id="@+id/recommand_song_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/AppTheme"
+        android:backgroundTintMode="screen"
+        android:iconifiedByDefault="false"
+        android:inputType="text"
+        android:layout_marginBottom="10dp"
+        android:queryHint="Song, album or artist">
+
+        <requestFocus />
+    </SearchView>
+
+    <LinearLayout
+        android:background="@color/_yellow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Songs founded"
+
+            android:textSize="16sp"
+            android:textColor="@color/_black"
+            android:layout_marginStart="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/recommand_song_list"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ListView>
+
+
 
 </LinearLayout>
