--- a/app/src/main/res/layout/song_detail_page_fragment.xml
+++ b/app/src/main/res/layout/song_detail_page_fragment.xml
@@ -82,7 +82,7 @@
                android:layout_marginLeft="10dp"
                 android:layout_below="@+id/relativeLayout"
                 android:layout_marginTop="10dp"
-                android:text="Recommanded by ..."
+                android:text="Recommended by..."
                 android:textSize="14sp" />
 
             <Button
