Complétion de la fonctionnalité : ajout d'un ou plusieurs morceaux à liste des morceaux recommandés par le user

--- a/app/src/main/res/menu/my_profile_menu.xml
+++ b/app/src/main/res/menu/my_profile_menu.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/share_a_song"
         android:icon="?android:attr/actionModeShareDrawable"
         android:title="Item"
         app:showAsAction="always" />
-    <item android:title="Item" />
 
 </menu>
