--- a/app/src/main/res/layout/fragment_recommand_song.xml
+++ b/app/src/main/res/layout/fragment_recommand_song.xml
@@ -39,7 +39,7 @@
 
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:text="Songs founded"
+                android:text="Songs found"
                 android:textColor="@color/_black"
                 android:textSize="16sp" />
         </LinearLayout>
