--- a/app/src/main/res/menu/custom_playlists_menu.xml
+++ b/app/src/main/res/menu/custom_playlists_menu.xml
@@ -10,6 +10,6 @@
     <item
         android:id="@+id/add_playlist"
         android:icon="@drawable/ic_add"
-        android:title="Add a new playlist"
+        android:title="Add new playlist"
         app:showAsAction="always" />
 </menu>
